added footer block

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -6,4 +6,11 @@
   
     margin-bottom: $mainMargin;
   }
+
+  &__block-footer {
+    margin-left: auto;
+    margin-right: auto;
+  
+    margin-bottom: 0;
+  }
 }
