--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,3 +1,17 @@
 * {
   box-sizing: border-box;
+  transition: all 0.5s;
+  scroll-behavior: smooth;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+a {
+  font-style: none;
+}
+
+button {
+  cursor: pointer;
 }
