--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,20 +5,24 @@
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(8, 1fr);
-  column-gap: 30px;
 
   overflow-x: hidden;
 
   &__img {
-    grid-column: 6 / 17;
+    grid-column: 7 / 17;
     grid-row: 1 / 9;
     display: block;
+
+    align-self: stretch;
+    justify-self: stretch;
   }
 
   &__abbr {
     grid-column: 8 / 10;
     grid-row: 1 / 3;
     z-index: 2;
+
+    margin-top: 25px;
 
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
@@ -28,8 +32,10 @@
   }
 
   &__title {
-    grid-column: 3 / 8;
+    grid-column: 4 / 7;
     grid-row: 4 / 6;
+
+    justify-self: end;
 
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
@@ -40,14 +46,26 @@
   }
 
   &__decoration {
+    grid-column: 7/ 9;
+    grid-row: 4 / 5;
+
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 72px;
+    line-height: 100%;
+    color: #000;
+    text-transform: uppercase;
+
     -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: transparent;
   }
 
   &__button {
     position: relative;
-    grid-column: 3 / 6;
+    grid-column: 4 / 6;
     grid-row: 7 / 9;
+    justify-self: end;
+
     width: 150px;
     height: 70px;
 
