--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -37,6 +37,7 @@
     column-gap: 20px;
     padding-bottom: 70px;
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
+    position: relative;
 
     @media (min-width: 768px) {
       grid-area: info;
@@ -120,7 +121,9 @@
     background-repeat: no-repeat;
     height: 50px;
     width: 50px;
-    transform: translate(230px, 46px);
+    position: absolute;
+    right: 0;
+    bottom: 20px;
 
     @media (min-width: 768px) {
       display: none;
