--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,7 +5,7 @@
     padding-left: 0;
     padding-right: 0;
     height: 480px;
-
+    position: relative;
     @media (min-width: 768px) {
       height: 384px;
     }
@@ -18,7 +18,7 @@
   &__main {
     display: flex;
     justify-content: center;
-    position: relative;
+    position: absolute;
     background-image: url(../images/museum.png);
     background-size: cover;
     height: 300px;
@@ -45,12 +45,12 @@
     @media (min-width: 768px) {
       position: absolute;
       top: 135px;
-      left: -217px;
+      left: -213px;
       padding-top: 0;
     }
 
     @media (min-width: 1280px) {
-      left: -280px;
+      left: -279px;
       top: 235px;
     }
 
@@ -64,7 +64,7 @@
     color: #0f0f08;
     position: absolute;
     top: 0;
-    right: 37%;
+    right: 50%;
     z-index: 1;
   }
 
