--- a/src/styles/_toggler.scss
+++ b/src/styles/_toggler.scss
@@ -13,6 +13,7 @@
 
 .toggler {
   left: 20px;
+  z-index: 4;
 
   &::before {
     content: "";
@@ -25,10 +26,11 @@
   }
 
   &--open {
-
     transform: rotate(45deg);
-    z-index: 2;
-    // top: 100px;
+
+    @media (min-width: 1280px) {
+      left: 0;
+    }
 
     &::before {
       top: 0;
