--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -4,16 +4,17 @@
 
   &--open {
     display: flex;
-    position: fixed;
-    z-index: 1;
+    position: absolute;
+    z-index: 2;
     width: 100%;
     justify-content: space-between;
     align-items: baseline;
     transition: 0.3s;
     background-color: #fff;
+    left: 0;
 
     @media (min-width: 1280px) {
-      margin-left: 50px;
+      left: 20px;
     }
   }
 
@@ -31,15 +32,28 @@
     }
   }
 
+  &__find {
+    display: none;
+    background-image: url(../images/find.svg);
+    width: 18px;
+    height: 18px;
+    background-repeat: no-repeat;
+
+    @media (min-width: 1280px) {
+      display: block;
+    }
+  }
+
   &__list {
     display: grid;
-    column-gap: 50px;
+    column-gap: 5px;
     justify-items: center;
+    align-items: baseline;
     background-color: #1a514c;
     width: 100%;
 
     @media (min-width: 1280px) {
-      grid-template-columns: repeat(8, 1fr);
+      grid-template-columns: repeat(9, minmax(100px, 1fr));
       background-color: #fff;
     }
   }
