added tablet version of the site

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -5,6 +5,9 @@
   grid-template-rows: repeat(12, 1fr);
   column-gap: 30px;
 
+  padding-left: 25px;
+  padding-right: 25px;
+
   overflow-x: hidden;
 
   &__title {
@@ -89,5 +92,33 @@
     line-height: 150%;
     color: #4e4e4e;
   }
+}
 
+@media screen and (max-width: 1200px) {
+  .events {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__title {
+      align-self: start;
+    }
+
+    &__one {
+      flex-direction: column;
+      gap: 30px;
+      margin-top: 50px;
+    }
+  
+    &__typeDate {
+      margin-top: 0;
+    }
+  
+    &__two {
+      margin-top: 50px;
+  
+      flex-direction: column;
+      gap: 30px;
+    }
+  }
 }
