--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,6 +6,8 @@
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(8, 1fr);
 
+  padding-left: 25px;
+
   overflow-x: hidden;
 
   &__img {
@@ -126,5 +128,4 @@
     height: 100px;
     background: #687480;
   }
-
 }
