--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -10,7 +10,13 @@
   &__block-footer {
     margin-left: auto;
     margin-right: auto;
-  
+
     margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .page__block {
+    margin-bottom: 90px;
   }
 }
