--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -19,6 +19,8 @@
     grid-column: 1 / 3;
     grid-row: 2 / 4;
 
+    margin-left: 25px;
+
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     font-size: 36px;
@@ -29,6 +31,8 @@
   &__socialMedia {
     grid-column: 1 / 3;
     grid-row: 5 / 7;
+
+    margin-left: 25px;
 
     display: flex;
     gap: 25px;
@@ -82,6 +86,8 @@
 
   &__rights {
     grid-column: 1 / 4;
+
+    margin-left: 25px;
   }
 
   &__author {
@@ -96,4 +102,74 @@
     height: 260px;
     background: rgba(26, 90, 76, 0.5);
   }
+}
+
+@media screen and (max-width: 1200px) {
+  .footer {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(15, 1fr);
+
+    &__abbr {
+      grid-column: 1 / 3;
+      grid-row: 2 / 4;
+    }
+  
+    &__socialMedia {
+      grid-column: 1 / 3;
+      grid-row: 5 / 7;
+    }
+  
+    &__schedule {
+      grid-column: 2 / 4;
+      grid-row: 2 / 8;
+    }
+
+    &__text--weekends {
+      max-width: 160px;
+    }
+
+    &__contacts {
+      grid-column: 4 / 6;
+      grid-row: 2 / 6;
+
+      width: 160px;
+    }
+  
+    &__links {
+      grid-column: 2 / 4;
+      grid-row: 10 / 14;
+    }
+  
+    &__outLinks {
+      grid-column: 4 / 6;
+      grid-row: 10 / 14;
+  
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+  
+    &__rights,
+    &__author {
+      grid-row: 16 / 17;
+      font-size: 12px;
+    }
+
+    &__author {
+      grid-column: 4 / 5;
+      justify-self: end;
+    }
+  
+    &__line {
+      width: 460px;
+      height: 1px;
+
+      align-self: center;
+
+      grid-column: 2 / 5;
+      grid-row: 7 / 9;
+    }
+  
+  }
+  
 }
