--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -7,6 +7,10 @@
     width: 100%;
     margin-bottom: 15px;
 
+    &:hover {
+      animation: pulse 3s;
+    }
+
     @media (min-width: 768px) {
       margin-bottom: 30px;
     }
