--- a/src/styles/_toggler.scss
+++ b/src/styles/_toggler.scss
@@ -2,12 +2,12 @@
 .toggler::before,
 .toggler::after {
   background-color: #0f0e08;
-  width: 20px;
-  height: 3px;
+  width: 24px;
+  height: 4px;
   position: absolute;
   top: 15px;
   left: 0;
-  transition: 0.3s;
+  transition: 0.3s linear;
   cursor: pointer;
 }
 
