--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "toggler";
 @import "nav";
 @import "title";
+@import "animation";
 @import "events";
 @import "exhibition";
 @import "lection";
