--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -52,6 +52,11 @@
 
   &__logo {
     padding-top: 50px;
+    transition: 0.3s linear;
+
+    &:hover {
+      transform: translateY(-15px);
+    }
 
     @media (min-width: 768px) {
       padding-top: 15px;
@@ -62,6 +67,11 @@
     height: 24px;
     background-repeat: no-repeat;
     display: inline-block;
+    transition: 0.3s linear;
+
+    &:hover {
+      transform: scale(1.3);
+    }
 
     &--fb {
       background-image: url(../images/fb.svg);
@@ -81,6 +91,12 @@
     justify-content: space-between;
     grid-template-columns: 2fr 1fr;
     margin-bottom: 70px;
+    transition: 0.3s linear;
+
+    & a:hover {
+      font-weight: 700;
+      color: #1a5a4c;
+    }
 
     &--left,
     &--right {
