--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -29,6 +29,11 @@
     margin: 0 auto;
     display: none;
     margin-bottom: 30px;
+    transition: 0.3s linear;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     &:nth-child(1),
     &:nth-child(2) {
@@ -37,10 +42,6 @@
 
     @media (min-width: 768px) {
       height: 543px;
-
-      // &:nth-child(2) {
-      //   display: block;
-      // }
 
       &:nth-child(3) {
         display: block;
