--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -41,6 +41,7 @@
     padding-top: 320px;
     display: flex;
     flex-direction: column;
+    z-index: 2;
 
     @media (min-width: 768px) {
       position: absolute;
@@ -106,6 +107,12 @@
     background: linear-gradient(to right, #fff 80%, #1a5a4c 80%);
     position: relative;
     cursor: pointer;
+    transition: 0.3s linear;
+
+    &:hover {
+      box-shadow: inset 10em 0 0 0 #1a5a4c;
+      color: #fff;
+    }
 
     @media (min-width: 768px) {
       width: 220px;
@@ -145,6 +152,12 @@
     left: 0;
     bottom: 88px;
     transform: rotate(-90deg);
+    transition: 0.3s linear;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+
     &::before {
       content: "";
       width: 70px;
