added mobile version of the site

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -128,5 +128,19 @@
   .gallery__img-6 {
     display: block;
   }
-  
+}
+
+@media screen and (max-width: 800px) {
+  .gallery {
+    gap: 40px;
+
+    &__title {
+      font-size: 36px;
+      text-align: center;
+    }
+
+    &__img {
+      max-height: 410px;
+    }
+  }
 }
