--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -8,7 +8,7 @@
   }
 
   &__container {
-    width: 570px;
+    max-width: 570px;
     height: 240px;
 
     margin-top: -100px;
@@ -49,5 +49,41 @@
     font-size: 36px;
     line-height: 100%;
     color: #0f0e08;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .lection {
+
+    &__container {
+      width: 75%;
+      height: auto;
+      padding: 15px;
+    }
+
+    &__type,
+    &__date {
+      font-size: 16px;
+    }
+  
+    &__name {
+      text-align: center;
+      font-size: 28px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .lection {
+
+    &__type,
+    &__date {
+      font-size: 14px;
+    }
+  
+    &__name {
+      text-align: center;
+      font-size: 24px;
+    }
   }
 }
