--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -122,3 +122,45 @@
     }
   }
 }
+
+@media screen and (max-width: 800px) {
+  .events {
+
+    padding: 0;
+
+    &__title {
+      font-size: 36px;
+      align-self: center;
+    }
+
+    &__imgItem {
+      display: block;
+      width: 100%;
+    }
+
+    &__one,
+    &__two {
+      width: 100%;
+    }
+
+    &__container {
+      margin-right: 25px;
+      margin-left: 25px;
+    }
+
+    &__type,
+    &__date {
+      font-size: 16px;
+    }
+
+    &__name {
+      margin-top: 10px;
+      font-size: 28px;
+    }
+
+    &__description {
+      margin-top: 10px;
+      font-size: 16px;
+    }
+  }
+}
