--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -169,7 +169,87 @@
       grid-column: 2 / 5;
       grid-row: 7 / 9;
     }
-  
   }
+}
+
+@media screen and (max-width: 800px) {
+  .footer {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+
+    &__abbr {
+      grid-column: 1 / 2;
+      grid-row: 2 / 4;
+    }
   
+    &__socialMedia {
+      grid-column: 2 / 3;
+      grid-row: 2 / 4;
+
+      justify-self: end;
+      align-self: center;
+      margin-right: 25px;
+    }
+  
+    &__schedule {
+      grid-column: 1 / 2;
+      grid-row: 4 / 10;
+
+      margin-left: 25px;
+    }
+
+    &__text--weekends {
+      max-width: 140px;
+    }
+
+    &__contacts {
+      grid-column: 2 / 3;
+      grid-row: 4 / 8;
+
+      width: 160px;
+    }
+  
+    &__links {
+      grid-column: 1 / 2;
+      grid-row: 12 / 15;
+
+      margin-left: 25px;
+    }
+  
+    &__outLinks {
+      grid-column: 2 / 3;
+      grid-row: 12 / 15;
+    }
+  
+    &__rights,
+    &__author {
+      grid-row: 16 / 17;
+      font-size: 12px;
+    }
+
+    &__rights {
+      grid-column: 1 / 2;
+    }
+
+    &__author {
+      grid-column: 2 / 3;
+      justify-self: start;
+    }
+  
+    &__line {
+      width: 280px;
+      height: 1px;
+
+      align-self: center;
+
+      grid-column: 1 / 3;
+      grid-row: 10 / 11;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer__text {
+    font-size: 10px;
+  }
 }
