--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -20,3 +20,16 @@
     margin-bottom: 90px;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .page__block {
+    margin-bottom: 70px;
+  }
+
+  .page__block-footer {
+    margin-left: auto;
+    margin-right: auto;
+
+    margin-bottom: 0;
+  }
+}
