--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,5 +1,6 @@
 .gallery {
   width: 100%;
+  max-width: 1570px;
 
   &__wrapper {
     width: 100%;
@@ -60,6 +61,7 @@
   }
 
   &__switcher {
+    margin-top: 25px;
     display: flex;
     gap: 25px;
     justify-content: center;
