--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -19,20 +19,6 @@
     justify-self: stretch;
   }
 
-  &__abbr {
-    grid-column: 8 / 10;
-    grid-row: 1 / 3;
-    z-index: 2;
-
-    margin-top: 25px;
-
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 100%;
-    color: #0f0e08;
-  }
-
   &__title {
     grid-column: 4 / 7;
     grid-row: 4 / 6;
@@ -130,7 +116,7 @@
 
   &__name::before {
     content: "";
-    position: relative;
+    position: absolute;
     transform-origin: left top;
     top: 50%;
     transform: rotate(-90deg) translate(0, calc(-100% - 10px));
