--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,6 +5,8 @@
   padding-left: 25px;
   padding-right: 25px;
 
+  overflow-x: hidden;
+
   &__bar {
     height: 100px;
   }
@@ -142,15 +144,20 @@
 
     &__navCheckbox:checked ~ &__bar &__list {
       z-index: 2;
-      width: 320px;
       padding: 20px;
+      width: 250px;
 
+      margin-left: -50px;
       display: flex;
       flex-direction: column;
 
       background-color: #fff;
       border: 3px solid #1a5a4c;
       border-radius: 5%;
+    }
+
+    &__navCheckbox:checked ~ &__bar &__abbr {
+      margin-left: -50px;
     }
   }
 }
