--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -9,6 +9,7 @@
 
   &__bar {
     height: 100px;
+    max-width: 200px;
   }
 
   &__bar,
@@ -147,7 +148,9 @@
       padding: 20px;
       width: 250px;
 
-      margin-left: -50px;
+      position: relative;
+      transform: translate(15%, 0);
+
       display: flex;
       flex-direction: column;
 
@@ -157,7 +160,7 @@
     }
 
     &__navCheckbox:checked ~ &__bar &__abbr {
-      margin-left: -50px;
+      transform: translate(60%, 0);
     }
   }
 }
