--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -9,7 +9,7 @@
 
   &__bar {
     height: 100px;
-    max-width: 200px;
+    overflow-y: hidden;
   }
 
   &__bar,
@@ -135,8 +135,10 @@
     }
 
     &__navCheckbox:checked ~ &__bar {
+      overflow-y: visible;
+
       position: absolute;
-      width: 100%;
+      max-width: 200px;
       z-index: 2;
 
       display: flex;
