--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -87,6 +87,15 @@
       width: 70px;
       background: url(../images/header_button.svg) center no-repeat;
       background-color: #1a5a4c;
+
+      transition: all 0.5s;
+    }
+
+    &:hover::after {
+      background-color: #189c80;
+      background-position: right;
+      border-top-right-radius: 30%;
+      border-bottom-right-radius: 30%;
     }
   }
 
@@ -95,7 +104,6 @@
     grid-row: 7 / 9;
 
     position: relative;
-    margin-left: 25px;
     min-width: 18px;
     height: 155px;
   }
