--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -51,8 +51,8 @@
     color: #0f0e08;
   }
 
-  &__item:hover {
-    transform: scale(1.2);
+  &__item:hover &__link {
+    color: rgb(23, 153, 136);
   }
 }
 
