--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -170,6 +170,16 @@
       margin-bottom: 20px;
     }
 
+    &-description {
+      text-decoration: none;
+      color: $darkGrey;
+      transition: color 0.5s;
+
+      &:hover {
+        color: $classicRed;
+      }
+    }
+
     @media screen and (max-width: 1280px) {
       grid-column: 3;
       grid-row: 1;
@@ -294,5 +304,10 @@
   &__link {
     text-decoration: none;
     color: $darkGrey;
+    transition: color 0.5s;
+
+    &:hover {
+      color: $classicRed;
+    }
   }
 }
