--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,9 +6,23 @@
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(8, 1fr);
 
-  padding-left: 25px;
+  padding-left: 175px;
 
   overflow-x: hidden;
+
+  &__abbr {
+    grid-column: 8 / 10;
+    grid-row: 1 / 3;
+    z-index: 1;
+
+    margin-top: 25px;
+
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0f0e08;
+  }
 
   &__img {
     grid-column: 7 / 17;
@@ -61,6 +75,7 @@
 
   &__button {
     position: relative;
+    
     grid-column: 4 / 6;
     grid-row: 7 / 9;
     justify-self: end;
@@ -93,9 +108,7 @@
 
     &:hover::after {
       background-color: #189c80;
-      background-position: right;
-      border-top-right-radius: 30%;
-      border-bottom-right-radius: 30%;
+      background-position: right 15px center;
     }
   }
 
@@ -132,6 +145,12 @@
     width: 1px;
     height: 100px;
     background: #687480;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    padding-left: 55px;
   }
 }
 
