--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,46 +1,131 @@
 .nav {
-  width: 100%;
-  max-width: 1920px;
+  position: fixed;
+  left: 0;
+  z-index: 2;
 
-  padding-left: 25px;
-  padding-right: 25px;
+  width: 100vw;
+  height: 450px;
+  max-height: 100vh;
 
-  overflow-x: hidden;
+  display: flex;
 
-  &__bar {
-    height: 100px;
-    overflow-y: hidden;
-  }
-
-  &__bar,
-  &__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    gap: 40px;
-  }
-
-  &__navCheckbox,
-  &__navSwitcher {
+  &__navCheckbox {
     display: none;
   }
 
-  &__abbr {
-    grid-column: 8 / 10;
-    grid-row: 1 / 3;
-    z-index: 2;
+  /*#region navSwitcher*/
+
+  &__navSwitcher {
+    position: relative;
+    display: block;
+    z-index: 3;
 
     margin-top: 25px;
+    margin-left: 175px;
 
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 100%;
-    color: #0f0e08;
+    width: 25px;
+    height: 25px;
+  }
+
+  &__navLine {
+    width: 25px;
+    height: 1px;
+    border: 1px solid black;
+    background-color: black;
+  }
+
+  &__navLine--first,
+  &__navLine--second,
+  &__navLine--third,
+  &__navLine--fourth {
+    position: absolute;
+  }
+
+  &__navLine--first {
+    top: 0;
+  }
+
+  &__navLine--second,
+  &__navLine--third {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+
+  &__navLine--fourth {
+    position: absolute;
+    bottom: 0;
+  }
+
+  &__nav {
+    display: none;
+  }
+
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--first,
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--second,
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--third,
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--fourth {
+    background-color: black;
+  }
+
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--second {
+    transform: rotate(45deg);
+  }
+
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--third {
+    transform: rotate(-45deg);
+  }
+
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--first {
+    top: 50%;
+    transform: translate(0, calc(-50% + 1px)) rotate(45deg);
+  }
+
+  &__navCheckbox:checked ~ &__navSwitcher > &__navLine--fourth {
+    top: 50%;
+    transform: translate(0, calc(-50% + 1px)) rotate(-45deg);
+  }
+  /*#endregion navSwitcher*/
+
+  &__bar {
+    width: 0;
+  }
+
+  &__list {
+    display: none;
+  }
+
+  &__navCheckbox:checked ~ &__bar {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: white;
+  }
+
+  &__navCheckbox:checked ~ &__bar &__list {
+    width: 100%;
+    height: 100px;
+    padding-right: 50px;
+
+    display: flex;
+    gap: 25px;
+
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  &__item {
+    display: block;
+    width: auto;
   }
 
   &__link {
+    display: block;
+    width: auto;
+
     padding-top: 20px;
     padding-bottom: 20px;
 
@@ -51,118 +136,63 @@
     color: #0f0e08;
   }
 
-  &__item:hover &__link {
-    color: rgb(23, 153, 136);
+  &__link:hover {
+    color: #189c80;
+  }
+
+  &__abbr {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0f0e08;
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   .nav {
-    &__bar {
-      display: none;
+    left: 0;
+
+    &__navCheckbox:checked ~ &__bar &__list {
+      margin-left: 225px;
+      
+      flex-direction: column;
+      gap: 0;
+  
+      justify-content: start;
+      align-items: start;
     }
+
+    &__link {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .nav {
 
     &__navSwitcher {
-      z-index: 3;
-      display: block;
-
-      position: absolute;
-      align-self: center;
-
-      width: 25px;
-      height: 25px;
-
-      margin-left: 25px;
-      margin-top: 25px;
-    }
-
-    &__navLine {
-      width: 25px;
-      height: 1px;
-      border: 1px solid black;
-      background-color: black;
-    }
-
-    &__navLine--first,
-    &__navLine--second,
-    &__navLine--third,
-    &__navLine--fourth {
-      position: absolute;
-    }
-
-    &__navLine--first {
-      top: 0;
-    }
-
-    &__navLine--second,
-    &__navLine--third {
-      top: 50%;
-      transform: translate(0, -50%);
-    }
-
-    &__navLine--fourth {
-      position: absolute;
-      bottom: 0;
-    }
-
-    &__nav {
-      display: none;
-    }
-
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--first,
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--second,
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--third,
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--fourth {
-      background-color: black;
-    }
-
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--second {
-      transform: rotate(45deg);
-    }
-
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--third {
-      transform: rotate(-45deg);
-    }
-
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--first {
-      top: 50%;
-      transform: translate(0, -50%) rotate(45deg);
-    }
-
-    &__navCheckbox:checked ~ &__navSwitcher > &__navLine--fourth {
-      top: 50%;
-      transform: translate(0, -50%) rotate(-45deg);
-    }
-
-    &__navCheckbox:checked ~ &__bar {
-      overflow-y: visible;
-
-      position: absolute;
-      max-width: 200px;
-      z-index: 2;
-
-      display: flex;
-      flex-direction: column;
+      margin-left: 55px;
     }
 
     &__navCheckbox:checked ~ &__bar &__list {
-      z-index: 2;
-      padding: 20px;
-      width: 250px;
+      margin-left: 95px;
+    }
+  }
+}
 
-      position: relative;
-      transform: translate(15%, 0);
+@media screen and (max-width: 800px) {
+  .nav {
+    top: 0;
 
-      display: flex;
-      flex-direction: column;
-
-      background-color: #fff;
-      border: 3px solid #1a5a4c;
-      border-radius: 5%;
+    &__navSwitcher {
+      margin-left: 25px;
     }
 
-    &__navCheckbox:checked ~ &__bar &__abbr {
-      transform: translate(60%, 0);
+    &__navCheckbox:checked ~ &__bar &__list {
+      margin-left: 75px;
     }
   }
 }
