--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,11 +1,9 @@
 .nav {
-  position: fixed;
+  position: absolute;
   left: 0;
-  z-index: 2;
 
   width: 100vw;
-  height: 450px;
-  max-height: 100vh;
+  height: 100vh;
 
   display: flex;
 
@@ -87,7 +85,7 @@
   /*#endregion navSwitcher*/
 
   &__bar {
-    width: 0;
+    transform: translate(-100%, 0);
   }
 
   &__list {
@@ -96,9 +94,12 @@
 
   &__navCheckbox:checked ~ &__bar {
     position: absolute;
+    z-index: 2;
+
     display: flex;
     justify-content: flex-end;
 
+    transform: translate(0, 0);
     width: 100%;
     height: 100%;
 
@@ -109,12 +110,17 @@
     width: 100%;
     height: 100px;
     padding-right: 50px;
+    margin-top: 5px;
 
     display: flex;
     gap: 25px;
 
     justify-content: flex-end;
     align-items: center;
+  }
+
+  &__navCheckbox:checked ~ &__bar &__list :first-child {
+    align-self: center;
   }
 
   &__item {
@@ -124,7 +130,6 @@
 
   &__link {
     display: block;
-    width: auto;
 
     padding-top: 20px;
     padding-bottom: 20px;
