added changes according to the mentor's suggestions

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -148,6 +148,12 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+  .header {
+    padding-left: 136px;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .header {
     padding-left: 55px;
