--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -153,16 +153,24 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+  .nav {
+    &__navSwitcher {
+      margin-left: 136px;
+    }
+  }
+}
+
 @media screen and (max-width: 1400px) {
   .nav {
     left: 0;
 
     &__navCheckbox:checked ~ &__bar &__list {
       margin-left: 225px;
-      
+
       flex-direction: column;
       gap: 0;
-  
+
       justify-content: start;
       align-items: start;
     }
