--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -5,8 +5,8 @@
   grid-template-rows: repeat(12, 1fr);
   column-gap: 30px;
 
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 175px;
+  padding-right: 175px;
 
   overflow-x: hidden;
 
@@ -68,6 +68,8 @@
   &__name {
     position: relative;
     margin-top: 30px;
+    transform: translate(-0.5%, 0);
+
     font-family: "Montserrat", sans-serif;
     font-weight: normal;
     font-size: 36px;
@@ -78,7 +80,7 @@
       content: "";
       position: absolute;
       bottom: 0;
-      transform: translate(100%, -50%);
+      transform: translate(50%, -50%);
       height: 15px;
       width: 15px;
       background-color: #f14a27;
@@ -91,6 +93,20 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .events {
+    padding-left: 136px;
+    padding-right: 136px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .events {
+    padding-left: 136px;
+    padding-right: 136px;
   }
 }
 
@@ -129,13 +145,17 @@
     padding: 0;
 
     &__title {
+      max-width: 280px;
       font-size: 36px;
       align-self: center;
+      text-align: center;
     }
 
     &__imgItem {
       display: block;
       width: 100%;
+      padding-left: 20px;
+      padding-right: 20px;
     }
 
     &__one,
@@ -144,8 +164,8 @@
     }
 
     &__container {
-      margin-right: 25px;
-      margin-left: 25px;
+      margin-right: 20px;
+      margin-left: 20px;
     }
 
     &__type,
