--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -102,6 +102,10 @@
     height: 260px;
     background: rgba(26, 90, 76, 0.5);
   }
+
+  &__up {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -244,6 +248,23 @@
 
       grid-column: 1 / 3;
       grid-row: 10 / 11;
+    }
+
+    &__up {
+      grid-row: 9 / 10;
+      grid-column: 2 / 2;
+      justify-self: end;
+      margin-right: 20px;
+      
+      display: block;
+      width: 50px;
+      height: 50px;
+
+      border: 1px solid #1a5a4c;
+      border-radius: 50%;
+
+      text-align: center;
+      line-height: 50px;
     }
   }
 }
