--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -22,7 +22,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 26px;
   }
 
   &__type {
@@ -56,9 +55,9 @@
   .lection {
 
     &__container {
-      width: 75%;
+      width: 80%;
       height: auto;
-      padding: 15px;
+      padding: 45px 100px 50px;
     }
 
     &__type,
@@ -67,8 +66,36 @@
     }
   
     &__name {
-      text-align: center;
       font-size: 28px;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .lection {
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      width: 80%;
+      height: auto;
+      padding: 25px 20px 35px;
+    }
+    
+    &__typeDate {
+      width: 100%;
+      max-width: 280px;
+    }
+
+    &__type,
+    &__date {
+      font-size: 14px;
+    }
+  
+    &__name {
+      text-align: center;
     }
   }
 }
@@ -80,7 +107,7 @@
     &__date {
       font-size: 14px;
     }
-  
+
     &__name {
       text-align: center;
       font-size: 24px;
