add big header on max viewport

--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -1,6 +1,8 @@
 .burger {
-  margin-left: 40px;
-  z-index: 4;
+  @media screen and (max-width: 1280px) {
+    margin-left: 40px;
+    z-index: 4;
+  }
 
   @media screen and (max-width: 768px) {
     margin-left: 10px;
@@ -9,6 +11,7 @@
   cursor: pointer;
 
   &__menu {
+    display: none;
     position: relative;
     z-index: 4;
 
@@ -34,6 +37,7 @@
     }
 
     @media screen and (max-width: 1280px) {
+      display: block;
       transform: scale(0.8);
     }
 
@@ -78,6 +82,6 @@
 
   100% {
     background: $darkGreen;
-    transform: translate(-10px, 0);
+    transform: translate(5px, 0);
   }
 }
