--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,13 +6,17 @@
     @include logo;
     order: 2;
 
+    @media (max-width: 990px) {
+      text-align: center;
+    }
+
     @media (max-width: 928px) {
       font-size: 24px;
     }
 
-    @media (max-width: 640px) {
-      text-align: center;
-    }
+    // @media (max-width: 640px) {
+    //   text-align: center;
+    // }
   }
 
   &__search {
@@ -79,6 +83,10 @@
       display: block;
     }
 
+    @media (max-width: 990px) {
+      z-index: 2;
+    }
+
     @media (max-width: 640px) {
       z-index: 2;
       margin: 0;
@@ -127,6 +135,15 @@
     & ~ .nav__list {
       opacity: 1;
       justify-content: center;
+
+      @media (max-width: 990px) {
+        flex-direction: column;
+        margin-left: -50px;
+      }
+
+      @media (max-width: 765px) {
+        height: 600px;
+      }
 
       @media (max-width: 640px) {
         height: 505px;
