fixes for 320px

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -85,7 +85,7 @@
     @include title(96px, 110px, $colorLightGray);
 
     @media (max-width: 940px) {
-      font-size: 70px;
+      font-size: 62px;
       line-height: 96px;
     }
     @media (max-width: 460px) {
@@ -138,6 +138,10 @@
   margin-bottom: 80px;
   @media (max-width: 729px) {
     margin-bottom: 40px;
+  }
+
+  @media (max-width: 630px) {
+    margin-bottom: 30px;
   }
 
   @media (max-width: 480px) {
@@ -194,6 +198,10 @@
       margin-bottom: 30px;
     }
 
+    @media (max-width: 630px) {
+      margin-bottom: 20px;
+    }
+
     @media (max-width: 420px) {
       margin-bottom: 20px;
     }
@@ -217,11 +225,23 @@
     display: flex;
     gap: $gridGap;
 
-    @media (max-width: 420px) {
+    @media (max-width: 630px) {
       flex-direction: column;
+      gap: 0;
+    }
+
+    //@media (max-width: 480px) {
+    //  margin-top: 30px;
+    //}
+
+    @media (max-width: 420px) {
       align-items: center;
       margin-top: 10px;
     }
+  }
+
+  &__button {
+
   }
 
   &__image-wrap {
