--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,10 @@ body {
   max-width: 1280px;
   padding: 0 30px;
   margin: 0 auto;
+
+  @media (max-width: 340px) {
+    padding: 0 20px;
+  }
 }
 
 .button {
@@ -39,8 +43,13 @@ body {
     margin-top: 40px;
   }
 
+  @media (max-width: 480px) {
+    margin-top: 30px;
+  }
+
   @media (max-width: 420px) {
     margin-top: 10px;
+    width: 245px;
   }
 
 }
