--- a/src/styles/visit.scss
+++ b/src/styles/visit.scss
@@ -24,6 +24,10 @@
       justify-content: center;
       align-items: center;
     }
+
+    @media (max-width: 340px) {
+      padding: 0 20px;
+    }
   }
 
   &__image-wrap {
