Museum website with adaptive for mobile-screen

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./scss/container";
+@import "./scss/header";
+@import "./scss/events";
+@import "./scss/lection";
+@import "./scss/gallery";
+@import "./scss/subscription";
+@import "./scss/footer";
+@import "./scss/nav";
