Added hover and fixed visual part

--- a/src/styles/actual.scss
+++ b/src/styles/actual.scss
@@ -2,6 +2,10 @@
   &__article {
     @include mainArticles;
     margin-bottom: 60px;
+
+    @media (max-width: 768px) {
+      text-align: center;
+    }
   }
 
   &__firstBlock {
@@ -60,7 +64,10 @@
     @media (max-width: 1170px) {
       order: 2;
     }
-    // margin-left: 130px;
+
+    @media (max-width: 768px) {
+      justify-self: center;
+    }
   }
 
   &__exposure {
