--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -51,10 +51,12 @@
       top: 0;
       left: 50%;
       transform: translate(-50%);
+
+      width: 100%;
     }
 
     @media (max-width: 480px) {
-      width: 320px;
+      // width: 320px;
       height: 300px;
     }
   }
@@ -164,6 +166,10 @@
     width: 150px + 70px;
     border: 1px solid $mainGreen;
 
+    &:hover {
+      transform: none;
+    }
+
     @media (max-width: 970px) {
       width: 200px;
     }
@@ -205,6 +211,10 @@
       height: 70px;
       background-color: $mainGreen;
       display: flex;
+
+      &:hover {
+        background-color: $dark;
+      }
 
       @media (max-width: 970px) {
         width: 50px;
