--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,6 +5,11 @@
   &__logo {
     @include logo;
     order: 2;
+    transition-duration: $transDuration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @media (max-width: 990px) {
       text-align: center;
