--- a/src/styles/support.scss
+++ b/src/styles/support.scss
@@ -66,6 +66,10 @@
 
     margin-left: 10px;
 
+    &:hover {
+      background-color: $mainGreen;
+    }
+
     @media (max-width: 480px) {
       width: 50px;
       height: 50px;
