--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -70,4 +70,63 @@
     margin-left: 30px;
   }
 
+  &__carousel-wrapper {
+    text-align: center;
+
+    @media (min-width: 1191px) {
+      display: none;
+    }
+  }
+
+  &__carousel-input {
+    display: none;
+  }
+
+  &__carousel-labels {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__carousel-label:not(:last-child) {
+    margin-right: 22px;
+  }
+
+  &__carousel-item {
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #e0e0e0;
+
+    cursor: pointer;
+  }
+
+  &__carousel-input--1:checked ~ &__carousel-labels/**/
+  &__carousel-label:nth-child(1) &__carousel-item {
+    background-color: #1a5a4c;
+  }
+
+  &__carousel-input--2:checked ~ &__carousel-labels/**/
+  &__carousel-label:nth-child(2) &__carousel-item {
+    background-color: #1a5a4c;
+  }
+
+  &__carousel-input--3:checked ~ &__carousel-labels/**/
+  &__carousel-label:nth-child(3) &__carousel-item {
+    background-color: #1a5a4c;
+  }
+
+  &__carousel-input--4:checked ~ &__carousel-labels/**/
+  &__carousel-label:nth-child(4) &__carousel-item {
+    background-color: #1a5a4c;
+  }
+
+  &__button {
+    display: none;
+
+    @media (min-width: 1250px) {
+      display: flex;
+    }
+  }
+
 }
