--- a/src/styles/suscribing.scss
+++ b/src/styles/suscribing.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 
   &__wrap {
     display: flex;
@@ -34,7 +35,6 @@
 
   &__input {
     padding: 0 35px;
-    width: 470px;
     height: 70px;
     font-size: 14px;
     outline: none;
