--- a/src/styles/utils/_media.scss
+++ b/src/styles/utils/_media.scss
@@ -1,5 +1,75 @@
 @media (max-width: 655px) {
 
+  .subscribing {
+    height: 386px !important;
+
+    &__input {
+      width: 233px !important;
+    }
+
+    &__btn {
+      margin-left: 0 !important;
+    }
+
+    &__text {
+      width: 320px;
+      text-align: center;
+      line-height: 150% !important;
+    }
+  }
+
+  .gallery {
+    margin-bottom: 139px !important;
+
+    &__h2 {
+      font-size: 36px;
+    }
+
+    &__item-3 {
+      display: none;
+      width: 280px;
+      height: 410px;
+    }
+
+    &__item-1 {
+      width: 280px !important;
+      height: 410px !important;
+    }
+  }
+
+  .leacture {
+    height: 210px !important;
+
+    &__block {
+      max-width: 90%;
+      height: 154px !important;
+    }
+
+    &__text {
+      display: none;
+      text-align: center;
+      line-height: 100%;
+
+      &__mob {
+        font-size: 28px !important;
+        display: block !important;
+      }
+    }
+
+    &__date {
+      width: 230px !important;
+    }
+
+    &__item-1 {
+      font-size: 16px !important;
+      line-height: 150% !important;
+    }
+
+    &__item-2 {
+      font-size: 16px !important;
+    }
+  }
+
   .header {
     height: 300px !important;
 
@@ -123,6 +193,42 @@
 
 @media (max-width: 1190px) {
 
+  .footer {
+    padding: 0 35px;
+
+    &__content-wrap {
+      flex-direction: column;
+    }
+
+    &__right {
+      margin-top: 90px;
+      margin-left: 90px;
+    }
+
+    &::after {
+      display: none;
+    }
+
+    &__schedule {
+      width: 30% !important;
+    }
+
+    &__left {
+      width: 80% !important;
+
+      &::after {
+        position: absolute;
+        content: "";
+        background-color: rgba(26, 90, 76, 0.5);
+        width: 1px;
+        height: 460px;
+        top: 25%;
+        left: 50%;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
   .header {
     height: 384px;
     padding-left: 34px;
@@ -212,24 +318,46 @@
     padding: 0 35px;
 
     &__wrap {
-      width: 1170px;
+      max-width: 1170px;
     }
 
-    &__item-3 {
-      display: none;
+    &__first-line {
+      max-width: 100%;
+      justify-content: center;
+    }
+
+    &__h2 {
+      margin-top: 210px !important;
+      text-align: center;
     }
 
     &__item-6 {
       display: none;
     }
+
+    &__item-2 {
+      display: none;
+    }
+
+    &__item-4 {
+      display: none;
+    }
+
+    &__item-5 {
+      display: none;
+    }
   }
 
   .subscribing {
-    height: 550px;
+    height: 380px;
+
+    &__input {
+      width: 395px;
+    }
   }
 
-  .footer {
-    padding: 0 35px;
+  .toggler {
+    margin-left: 20px;
   }
 }
 
@@ -275,6 +403,18 @@
     &__item-6 {
       display: none;
     }
+  }
+
+  .subscribing {
+    height: 550px;
+
+    &__input {
+      width: 470px;
+    }
+  }
+
+  .footer {
+    padding: 0 55px;
   }
 }
 
