--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -5,6 +5,15 @@
   cursor: default;
 }
 
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
 a,
 button {
   cursor: pointer;
@@ -12,4 +21,12 @@ button {
 
 input {
   cursor: text;
+}
+
+a:hover {
+  color: #f14a27;
+}
+
+html {
+  scroll-behavior: smooth;
 }
