--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,6 +6,11 @@
   display: flex;
   max-width: 1920px;
 
+  &__menu {
+    width: 20px;
+    height: 20px;
+  }
+
   &__left-wrap {
     position: relative;
     display: flex;
@@ -14,6 +19,10 @@
     justify-content: center;
     align-items: flex-end;
     z-index: 1;
+
+    &--close {
+      display: none;
+    }
   }
 
   &__right-wrap {
@@ -24,10 +33,11 @@
   }
 
   &__img-items {
+    z-index: 2;
     width: 100%;
     height: 655px;
     object-fit: cover;
-    object-position: bottom;
+    object-position: right 100% bottom 50%;
   }
 
   &__line {
@@ -38,7 +48,8 @@
   }
 
   &__line-text {
-    text-decoration: none;
+    width: 5px;
+    height: 20px;
     @extend %ibm;
     @extend %w7;
     color: #687480;
@@ -130,10 +141,45 @@
       background-position: center;
     }
   }
+
+  &__mobile__popup {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    height: 100vh;
+    width: 100vw;
+    transition: left 0.3s;
+    background-color: #fff;
+    z-index: 1;
+    align-items: center;
+    flex-direction: column;
+
+    &--has-popup {
+      left: 0;
+    }
+
+    &__logo {
+      width: 100px;
+      height: 100px;
+      background-image: url("../images/logo.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-bottom: 5%;
+    }
+
+    &__item {
+      @extend %ibm;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 200%;
+      color: #687480;
+    }
+  }
 }
 
 .toggler {
-  left: 23px;
+  z-index: 3;
   top: 45px;
   position: absolute;
   cursor: pointer;
@@ -160,5 +206,24 @@
 
   &:hover {
     cursor: pointer;
+  }
+
+  &--open {
+    transform: rotate(45deg);
+  }
+
+  &--open::before {
+    top: 0;
+  }
+
+  &--open::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+}
+
+.page {
+  &--fixed {
+    overflow: hidden;
   }
 }
