--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -163,6 +163,9 @@
   }
 
   &__nav {
+    display: flex;
+    justify-content: space-between;
+
     @media (min-width: 768px) {
       padding-right: 150px;
     }
@@ -175,5 +178,16 @@
 
   &__designer {
     margin-bottom: 14px;
+  }
+}
+
+.nav {
+  &__list {
+    margin-bottom: 20px;
+  }
+
+  &__left-part {
+    margin-right: 40px;
+    width: 200px;
   }
 }
