--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,6 +6,18 @@
   display: flex;
   max-width: 1920px;
 
+  &__togler-wrap {
+    position: absolute;
+    top: 45px;
+    width: 18px;
+    height: 14px;
+    z-index: 100;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__menu {
     width: 20px;
     height: 20px;
@@ -93,7 +105,7 @@
   &__span {
     position: absolute;
     top: 0;
-    right: -140px;
+    right: -141px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 72px;
@@ -140,6 +152,11 @@
       background-repeat: no-repeat;
       background-position: center;
     }
+
+    &:hover::after {
+      background-color: #ed4a34;
+      transition: background-color 0.5s;
+    }
   }
 
   &__mobile__popup {
@@ -171,7 +188,7 @@
     &__item {
       @extend %ibm;
       font-weight: 400;
-      font-size: 30px;
+      font-size: 25px;
       line-height: 200%;
       color: #687480;
     }
@@ -180,7 +197,7 @@
 
 .toggler {
   z-index: 3;
-  top: 45px;
+  top: 6px;
   position: absolute;
   cursor: pointer;
   transition-duration: 0.3s;
