--- a/src/styles/utils/_media.scss
+++ b/src/styles/utils/_media.scss
@@ -1,5 +1,4 @@
 @media (max-width: 655px) {
-
   .subscribing {
     height: 386px !important;
 
@@ -186,13 +185,12 @@
     }
   }
 
-  .toggler {
+  .header__togler-wrap {
     top: 33px;
   }
 }
 
 @media (max-width: 1190px) {
-
   .footer {
     padding: 0 35px;
 
@@ -245,7 +243,7 @@
 
     &__span {
       font-size: 55px;
-      right: -108px;
+      right: -109px;
     }
 
     &__line {
@@ -283,7 +281,6 @@
     }
 
     &__content-wrap {
-
       flex-direction: column;
     }
 
@@ -356,14 +353,13 @@
     }
   }
 
-  .toggler {
+  .header__togler-wrap {
     margin-left: 20px;
   }
 }
 
 @media (min-width: 1191px) {
   .header {
-
     &__button {
       left: -36px;
     }
@@ -503,7 +499,6 @@
   }
 
   .gallery {
-
     &__wrap {
       width: 1570px;
     }
