--- a/src/styles/suscribing.scss
+++ b/src/styles/suscribing.scss
@@ -26,6 +26,7 @@
     @extend %ibm;
     line-height: 100%;
     margin-bottom: 66px;
+    letter-spacing: 0.1em;
   }
 
   &__form {
@@ -51,5 +52,10 @@
     background-size: 10%;
     background-position: center;
     margin-left: 30px;
+
+    &:hover {
+      background-color: #1a5a4c;
+      transition: background-color 0.5s;
+    }
   }
 }
