The solution was corrected according to the suggestions

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,12 @@ body {
   background: $c-gray;
 }
 
+.lock {
+  @include tabletScreen {
+    overflow: hidden;
+  }
+}
+
 @import "header";
 @import "wrapper";
 @import "link-button";
