--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -72,10 +72,11 @@
 
   &__burger {
     z-index: 4;
+    // line-height: 40px;
     display: block;
     position: absolute;
-    width: 18px;
-    height: 15px;
+    width: 30px;
+    height: 20px;
     top: 40px;
 
     cursor: pointer;
@@ -91,7 +92,7 @@
       left: 0;
       width: 100%;
       height: 2px;
-      top: 45%;
+      top: 9px;
     }
     &::before,
     &::after {
@@ -110,9 +111,9 @@
     }
 
     &--active {
-      top: 44px;
+      // position: fixed;
       @include mobileScreen {
-        top: 37px;
+        // top: 37px;
       }
       @include tabletScreen {
         left: 0;
@@ -122,10 +123,11 @@
       }
       &:before {
         transform: rotate(45deg);
+        top: 9px;
       }
       &:after {
         transform: rotate(-45deg);
-        top: 0;
+        bottom: 9px;
       }
     }
   }
@@ -153,6 +155,9 @@
       grid-template-columns: 20fr 5fr;
     }
     @include tabletScreen {
+      width: 100%;
+      position: fixed;
+      // overflow: hidden;
       top: -100vh;
       padding-top: 110px;
     }
@@ -208,7 +213,7 @@
   }
 
   &__logo-text {
-    z-index: 3;
+    z-index: 4;
     @include logo-text;
     width: fit-content;
     justify-self: center;
@@ -225,9 +230,8 @@
       top: -80px;
       color: #0f0e08;
       @include tabletScreen {
+        top: 15px;
         left: 50%;
-        top: calc(-100vh + 15px);
-        transform: translateX(-50%);
       }
     }
   }
@@ -294,7 +298,7 @@
   
     @include mobileScreen {
       top: 433px;
-      left: calc(50% + 100px);
+      left: calc(50% + 90px);
       width: 50px;
       height: 50px;
     }
