add some changes

--- a/src/styles/scss/subscription.scss
+++ b/src/styles/scss/subscription.scss
@@ -53,6 +53,10 @@
 
     background: url("../images/subscription_button.svg") no-repeat 50%;
     background-color: #f14a27;
+
+    &:hover {
+      background-color: #a51b00;
+    }
   }
 }
 
