--- a/src/styles/scss/footer.scss
+++ b/src/styles/scss/footer.scss
@@ -12,6 +12,7 @@
     font-size: 14px;
     line-height: 140.62%;
     color: #0f0e08;
+
   }
 
   &__namu {
@@ -25,7 +26,7 @@
     color: #0f0e08;
   }
 
-  &__social {
+  &__socialFI {
     grid-column: 1 / 3;
     grid-row: 5 / 7;
     margin-left: 25px;
@@ -59,6 +60,10 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    & a:hover{
+      color: #f14a27;
+    }
   }
 
   &__links-right {
@@ -67,6 +72,10 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    & a:hover{
+      color: #f14a27;
+    }
   }
 
   &__rights {
@@ -98,7 +107,7 @@
       grid-row: 2 / 4;
     }
 
-    &__social {
+    &__socialFI {
       grid-column: 1 / 3;
       grid-row: 5 / 7;
     }
@@ -162,7 +171,7 @@
       grid-row: 2 / 4;
     }
 
-    &__social {
+    &__socialFI {
       grid-column: 2 / 3;
       grid-row: 2 / 4;
       justify-self: end;
