--- a/src/styles/scss/nav.scss
+++ b/src/styles/scss/nav.scss
@@ -69,28 +69,26 @@
   }
 
   &__checkbox:checked ~ &__bar {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 40%;
     position: absolute;
     transform: translate(0, 0);
     z-index: 2;
-    background-color: rgba(white, .4);
+    background-color: white;
+    border-radius: 20px;
+    border-top-left-radius: 0;
   }
 
   &__checkbox:checked ~ &__bar &__list {
     width: 100%;
-    height: 100px;
-    padding-right: 50px;
+    height: 100%;
+    padding-right: 150px;
     margin-top: 5px;
 
     display: flex;
 
     justify-content: flex-end;
     align-items: center;
-  }
-
-  &__checkbox:checked ~ &__bar &__list {
-    align-self: center;
   }
 
   &__item {
@@ -124,6 +122,7 @@
   }
 }
 
+
 @media screen and (max-width: 1440px) {
   .nav {
     left: 0;
@@ -156,6 +155,10 @@
       margin-left: 55px;
     }
 
+    &__checkbox:checked ~ &__bar {
+      height: 100%;
+    }
+
     &__checkbox:checked ~ &__bar &__list {
       margin-left: 95px;
     }
@@ -170,13 +173,27 @@
       margin-left: 50px;
     }
 
+    &__checkbox:checked ~ &__bar {
+      width: 80vw;
+
+      height: 120%;
+    }
+
     &__checkbox:checked ~ &__bar &__list {
-      margin-left: 30px;
+
+      margin-top: 80px;
+      margin-left: 50px;
       align-items: center;
     }
 
+    &__item {
+      width: 75vw;
+    }
+
     &__link {
-      font-size: 24px;
+      text-align: center;
+      font-size: 16px;
+      line-height: 5px;
       color: black;
     }
   }
