--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -123,9 +123,9 @@ button {
 }
 .header__button {
   position: relative;
-  width: 150px;
+  width: 120px;
   height: 70px;
-  grid-column: 4/6;
+  grid-column: 3/5;
   grid-row: 7/9;
   justify-self: end;
   border: 1px solid #1a5a4c;
@@ -571,6 +571,7 @@ button {
     gap: 30px;
   }
   .gallery__title {
+    margin-left: 0;
     font-size: 36px;
     text-align: center;
   }
@@ -623,6 +624,9 @@ button {
   margin-left: 30px;
   background: url("../images/subscription_button.svg") no-repeat 50%;
   background-color: #f14a27;
+}
+.subscription__button:hover {
+  background-color: #a51b00;
 }
 
 @media screen and (max-width: 800px) {
@@ -681,7 +685,7 @@ button {
   line-height: 100%;
   color: #0f0e08;
 }
-.footer__social {
+.footer__socialFI {
   grid-column: 1/3;
   grid-row: 5/7;
   margin-left: 25px;
@@ -712,12 +716,18 @@ button {
   flex-direction: column;
   gap: 20px;
 }
+.footer__links a:hover {
+  color: #f14a27;
+}
 .footer__links-right {
   grid-column: 13/15;
   grid-row: 2/6;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.footer__links-right a:hover {
+  color: #f14a27;
 }
 .footer__rights {
   grid-column: 1/4;
@@ -744,7 +754,7 @@ button {
     grid-column: 1/3;
     grid-row: 2/4;
   }
-  .footer__social {
+  .footer__socialFI {
     grid-column: 1/3;
     grid-row: 5/7;
   }
@@ -796,7 +806,7 @@ button {
     grid-column: 1/2;
     grid-row: 2/4;
   }
-  .footer__social {
+  .footer__socialFI {
     grid-column: 2/3;
     grid-row: 2/4;
     justify-self: end;
@@ -906,24 +916,23 @@ button {
   display: none;
 }
 .nav__checkbox:checked ~ .nav__bar {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 40%;
   position: absolute;
   transform: translate(0, 0);
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: white;
+  border-radius: 20px;
+  border-top-left-radius: 0;
 }
 .nav__checkbox:checked ~ .nav__bar .nav__list {
   width: 100%;
-  height: 100px;
-  padding-right: 50px;
+  height: 100%;
+  padding-right: 150px;
   margin-top: 5px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
-.nav__checkbox:checked ~ .nav__bar .nav__list {
-  align-self: center;
 }
 .nav__item {
   display: block;
@@ -973,6 +982,9 @@ button {
   .nav__navBurgerMenu {
     margin-left: 55px;
   }
+  .nav__checkbox:checked ~ .nav__bar {
+    height: 100%;
+  }
   .nav__checkbox:checked ~ .nav__bar .nav__list {
     margin-left: 95px;
   }
@@ -984,12 +996,22 @@ button {
   .nav__navBurgerMenu {
     margin-left: 50px;
   }
+  .nav__checkbox:checked ~ .nav__bar {
+    width: 80vw;
+    height: 120%;
+  }
   .nav__checkbox:checked ~ .nav__bar .nav__list {
-    margin-left: 30px;
+    margin-top: 80px;
+    margin-left: 50px;
     align-items: center;
   }
+  .nav__item {
+    width: 75vw;
+  }
   .nav__link {
-    font-size: 24px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 5px;
     color: black;
   }
 }
