--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -169,6 +169,10 @@
     width: 15px;
     height: 15px;
     background-color: $classicRed;
+
+    @media screen and (max-width: 768px) {
+      left: 8px;
+    }
   }
 
   &__content {
