--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -64,7 +64,7 @@
     line-height: 100%;
     color: #0f0f08;
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 50%;
     z-index: 1;
   }
