--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -12,6 +12,8 @@
     transition: 0.3s;
     background-color: #fff;
     left: 0;
+    height: 120px;
+    top: 0;
 
     @media (min-width: 1280px) {
       left: 20px;
@@ -26,6 +28,7 @@
     line-height: 100%;
     text-align: center;
     color: #0f0e08;
+    padding-top: 40px;
 
     @media (min-width: 1280px) {
       display: block;
@@ -75,7 +78,7 @@
 
       &:hover {
         border: none;
-        font-weight: bold;
+        transform: scale(1.1);
         color: #1a514c;
       }
     }
