--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -94,7 +94,8 @@
     transition: 0.3s linear;
 
     & a:hover {
-      font-weight: 700;
+      transform: scale(1.1);
+      transform-origin: left;
       color: #1a5a4c;
     }
 
