--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -56,7 +56,8 @@
     width: 100%;
 
     @media (min-width: 1280px) {
-      grid-template-columns: repeat(9, minmax(100px, 1fr));
+      display: flex;
+      justify-content: space-around;
       background-color: #fff;
     }
   }
