Fixed input. Add hover for imgs

--- a/src/styles/support.scss
+++ b/src/styles/support.scss
@@ -44,6 +44,9 @@
     height: 70px;
     outline: none;
     padding: 10px;
+    @include secondaryText;
+    font-weight: 400;
+    font-size: 18px;
 
     @media (max-width: 480px) {
       height: 50px;
