--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -19,6 +19,10 @@
     @media (max-width: 480px) {
       height: 454px;
     }
+
+    > img:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__firstImg {
