minor bugs fixed

--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -76,19 +76,23 @@
   display: block;
   width: 40vw;
   position: fixed;
+
   font-size: 18px;
-}
-
-#check-menu:checked ~ .burger__label {
-  position: fixed;
-}
-
-#check-menu:checked ~ .burger {
-  position: fixed;
 }
 
 #check-menu:checked ~ .burger__line {
   background-color: #fff;
+  position: fixed;
+  top: 6.5vh;
+  left: 7vw;
+}
+
+#check-menu:checked ~ .burger__label {
+  height: 50px;
+  width: 50px;
+  position: fixed;
+  top: 5vh;
+  left: 6vw;
 }
 
 #check-menu:checked ~ .burger__line--1 {
