--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,7 +5,7 @@
 
   &__list {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   &__item {
@@ -14,7 +14,7 @@
   }
 
   &__link {
-    font-size: 18px;
+    font-size: 14px;
     color: #0f0e08;
 
     &:hover {
