--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,7 +7,7 @@
   height: 655px;
   margin: 0 auto 150px;
   padding-left: 40px;
-  
+
   &__container {
     grid-column: 1;
     grid-row: 1 / span 2;
@@ -25,10 +25,13 @@
   }
 
   &__nav {
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
+    padding-top: 25px;
+    padding-left: 200px;
+    height: 100px;
     grid-row: 1;
-    align-self: center;
-    justify-self: start;
+    background-color: white;
+    width: 100%;
   }
 
   &__burger {
@@ -36,7 +39,7 @@
     grid-row-start: 1;
     align-self: center;
   }
-  
+
   &__events {
     grid-column-start: 1;
     grid-row: -1 / 1;
@@ -44,7 +47,7 @@
     align-self: end;
     height: 133px;
     position: relative;
-    
+
     line-height: 100%;
     text-align: right;
     font-family: "IBM Plex Sans", sans-serif;
@@ -146,7 +149,7 @@
       display: grid;
       grid-template: 100px 1fr 1fr / 25px 205px;
     }
-  
+
     &__logo {
       grid-column: 1 / span 2;
       grid-row: 1;
@@ -154,7 +157,7 @@
       justify-self: center;
       z-index: 1;
     }
-  
+
     &__burger {
       grid-column-start: 1;
       grid-row-start: 1;
@@ -176,7 +179,7 @@
       grid-row: 1 / span 2;
       justify-self: start;
       height: 384px;
-  
+
       & img {
         object-fit: cover;
       }
@@ -199,7 +202,7 @@
       justify-self: center;
       z-index: 1;
     }
-    
+
     &__image {
       grid-column: 1;
       grid-row: 1 / 2;
